# mlops

./: .gitignore  Makefile  pyproject.toml
conf/: local.yaml  remote.yaml
src/: config.py  data.py  train.py
